// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ManyToOne > should register ManyToOne metadata on child entity 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "ManyToOneItem",
    "named": true,
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [
        "update",
        "upsert",
      ],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "label",
      "max": null,
      "min": null,
      "mode": null,
      "name": "label",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "string",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "tagId",
      "max": null,
      "min": null,
      "mode": null,
      "name": "tagId",
      "named": false,
      "nullable": true,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
  ],
  "filters": [],
  "generated": [
    {
      "generator": null,
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "namespace": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "id": "tagId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "items",
      "joinKeys": {
        "tagId": "id",
      },
      "joinTable": null,
      "key": "tag",
      "options": {
        "deferrable": false,
        "initiallyDeferred": false,
        "loading": {
          "multiple": "eager",
          "single": "eager",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToOne",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`ManyToOne > should register with explicit joinKeys 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "ManyToOneExplicitProduct",
    "named": true,
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [
        "update",
        "upsert",
      ],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "title",
      "max": null,
      "min": null,
      "mode": null,
      "name": "title",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "string",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "categoryId",
      "max": null,
      "min": null,
      "mode": null,
      "name": "categoryId",
      "named": false,
      "nullable": true,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
  ],
  "filters": [],
  "generated": [
    {
      "generator": null,
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "namespace": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "id": "categoryId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "products",
      "joinKeys": {
        "categoryId": "id",
      },
      "joinTable": null,
      "key": "category",
      "options": {
        "deferrable": false,
        "initiallyDeferred": false,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToOne",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;
